tests/ui/resolve/path-attr-in-const-block.stderr
error: cannot find macro `foo` in this scope
  --> $DIR/path-attr-in-const-block.rs:6:19
   |
LL |         #![path = foo!()]
   |                   ^^^

error[E0539]: malformed `path` attribute input
  --> $DIR/path-attr-in-const-block.rs:6:9
   |
LL |         #![path = foo!()]
   |         ^^^^^^^^^^------^
   |         |         |
   |         |         expected a string literal here
   |         help: must be of the form: `#[path = "file"]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0539`.
